// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBoxToBoxArrow it computes an arrow between boxes 1`] = `
Array [
  16.998771579411137,
  20,
  8.372047275641503,
  21.00012308091999,
  9.372170356561488,
  29.626847384689622,
  1.4553784553064795,
  -0.11541787148841766,
  2.2407766187039275,
]
`;

exports[`getBoxToBoxArrow it computes an arrow between boxes with straights disabled 1`] = `
Array [
  16.998771579411137,
  20,
  8.372047275641503,
  21.00012308091999,
  9.372170356561488,
  29.626847384689622,
  1.4553784553064795,
  -0.11541787148841766,
  2.2407766187039275,
]
`;

exports[`getBoxToBoxArrow it computes an arrow from a box back to itself 1`] = `
Array [
  15,
  15,
  15,
  15,
  15,
  15,
  0,
  0,
  0,
]
`;

exports[`getBoxToBoxArrow it computes an arrow from a box back to itself 1`] = `
Array [
  15,
  10,
  15,
  0,
  15,
  -10,
  -1.5707963267948966,
  -1.5707963267948966,
  -1.5707963267948966,
]
`;

exports[`getBoxToBoxArrow it computes an arrow from a large box to a small box 1`] = `
Array [
  586,
  308.44950289059074,
  468.7903678636384,
  177.90714453888967,
  599.3327262153394,
  60.69751240252816,
  -0.7316352134720205,
  0.8391611133228757,
  -1.5170333768694693,
]
`;
